2002-05-31  Thiemo Seufer <seufer@csv.ica.uni-stuttgart.de>

	* config/tc-mips.c (load_address): Use mips_gp_register instead
	of hardcoded value. Remove dbl parameter, use HAVE_32BIT_ADDRESSES
	instead.
	(macro): Use mips_gp_register instead of hardcoded value.

2002-05-30  Richard Henderson  <rth@redhat.com>

	* expr.h (operatorT): Add O_md17..O_md32.
	* config/tc-alpha.c (O_lituse_tlsgd, O_lituse_tlsldm, O_tlsgd,
	O_tlsldm, O_gotdtprel, O_dtprelhi, O_dtprello, O_dtprel, O_gottprel,
	O_tprelhi, O_tprello, O_tprel): New.
	(USER_RELOC_P, alpha_reloc_op_tag, debug_exp): Include them.
	(DUMMY_RELOC_LITUSE_TLSGD, DUMMY_RELOC_LITUSE_TLSLDM): New.
	(LITUSE_TLSGD, LITUSE_TLSLDM): New.
	(struct alpha_reloc_tag): Add master, saw_tlsgd, saw_tlsld,
	saw_lu_tlsgd, saw_lu_tlsldm.  Make multi_section_p a bit field.
	(md_apply_fix3): Handle TLS relocations.
	(alpha_force_relocation, alpha_fix_adjustable): Likewise.
	(alpha_adjust_symtab_relocs): Sort LITERAL relocs after the
	associated TLS reloc.  Check lituse_tls relocs match up.
	(emit_insn): Handle TLS relocations.
	(ldX_op): Remove.

	* doc/c-alpha.texi: Add docs for tls relocations.

2002-05-30  Thiemo Seufer <seufer@csv.ica.uni-stuttgart.de>

	* config/tc-mips.c (mips_gprel_offset): New variable.
	(s_gpvalue): Use it.

2002-05-30  Diego Novillo  <dnovillo@redhat.com>

        * gas/config/tc-d10v.c (check_resource_conflict): Only check
        write-write conflicts.
        (md_assemble): Reformat introductory comment.
        (parallel_ok): Prevent packing only if the first
        instruction cannot be packed.

2002-05-30  Jason Eckhardt <jle@redhat.com>
	    Tom Rix <trix@redhat.com>

	* config/tc-d10v.c (build_insn): Check for immediates.

2002-05-28  Thiemo Seufer <seufer@csv.ica.uni-stuttgart.de>

	* config/tc-mips.c: Replace GP in comments by $gp.
	(mips_big_got): Initialize.
	(mips_trap): Initialize.
	(load_address): Use mips_gp_register instead of hardcoded value.